syntax = "proto3";

package edu.uci.ics.amber.engine.architecture.worker;

import "edu/uci/ics/amber/engine/architecture/sendsemantics/partitionings.proto";
import "edu/uci/ics/amber/engine/common/virtualidentity.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false
  no_default_values_in_constructor: true
};

message StartWorkerV2 {}

message PauseWorkerV2 {}

message ResumeWorkerV2 {}

message OpenOperatorV2 {}

message UpdateInputLinkingV2 {
  common.ActorVirtualIdentity identifier = 1 [(scalapb.field).no_box = true];
  common.LinkIdentity input_link = 2 [(scalapb.field).no_box = true];
}

message AddPartitioningV2 {
  common.LinkIdentity tag = 1 [(scalapb.field).no_box = true];
  architecture.sendsemantics.Partitioning partitioning = 2 [(scalapb.field).no_box = true];
}

message WorkerExecutionCompletedV2 {
}

message QueryStatisticsV2 {
}

message QueryCurrentInputTupleV2 {
}

message LocalOperatorExceptionV2 {
  string message = 1;
}

message InitializeOperatorLogicV2 {
  string code = 1;
  bool is_source = 2;

  // TODO: unify Attribute and Schema with java declaration
  message Attribute {
    string attribute_name = 1;
    string attribute_type = 2; // TODO: change it to enum AttributeType
  }

  message Schema {
    repeated Attribute attributes = 1;
  }

  repeated Schema output_schemas = 3;
}

message ModifyOperatorLogicV2 {
  string code = 1;
  bool is_source = 2;
}

message ReplayCurrentTupleV2 {
}

message PythonPrintV2 {
  string message = 1;
}

message EvaluateExpressionV2 {
  string expression = 1;
}

message QuerySelfWorkloadMetricsV2{
}

message LinkCompletedV2 {
  common.LinkIdentity link_id = 1 [(scalapb.field).no_box = true];
}

message InitializePortMappingV2 {
  message PortInfoPair {
    message PortInfo {
      int32 port_ordinal = 1;
      string port_name = 2;
    }
    common.LinkIdentity link_identity = 1 [(scalapb.field).no_box = true];
    PortInfo port_info = 2 [(scalapb.field).no_box = true];
  }
  repeated PortInfoPair input_to_ordinal_mapping = 1;
  repeated PortInfoPair output_to_ordinal_mapping = 2;
}

message ControlCommandV2 {
  oneof sealed_value {
    StartWorkerV2 start_worker = 1;
    PauseWorkerV2 pause_worker = 2;
    ResumeWorkerV2 resume_worker = 3;

    AddPartitioningV2 add_partitioning = 4;
    UpdateInputLinkingV2 update_input_linking = 5;
    InitializePortMappingV2 initialize_port_mapping = 6;

    OpenOperatorV2 open_operator = 11;
    LinkCompletedV2 link_completed = 12;

    InitializeOperatorLogicV2 initialize_operator_logic = 21;
    ModifyOperatorLogicV2 modify_operator_logic = 22;
    PythonPrintV2 python_print = 23;
    ReplayCurrentTupleV2 replay_current_tuple = 24;
    EvaluateExpressionV2 evaluate_expression = 25;

    QueryStatisticsV2 query_statistics = 41;
    QueryCurrentInputTupleV2 query_current_input_tuple = 42;
    QuerySelfWorkloadMetricsV2 query_self_workload_metrics = 43;

    LocalOperatorExceptionV2 local_operator_exception = 99;
    WorkerExecutionCompletedV2 worker_execution_completed = 101;
  }

}


