syntax = "proto3";

package edu.uci.ics.amber.engine.architecture.worker;
import "edu/uci/ics/amber/engine/architecture/sendsemantics/datatransferpolicy2.proto";
import "edu/uci/ics/amber/engine/common/virtualidentity.proto";
import "edu/uci/ics/amber/engine/common/statetransition2.proto";
message PauseWorker{}
message ResumeWorker{}
message StartWorker{}
message QueryStatistics{}

message WorkerStatistics{
  edu.uci.ics.amber.engine.common.WorkerState workerState = 1;
  int64 inputRowCount = 2;
  int64 outputRowCount = 3;

}

message WorkerStateInfo{
  edu.uci.ics.amber.engine.common.WorkerState workerState = 1;

}


message UpdateInputLinking{
  edu.uci.ics.amber.engine.common.ActorVirtualIdentity identifier = 1;
  edu.uci.ics.amber.engine.common.LinkIdentity inputLink = 2;
}
message AddOutputPolicy{
  edu.uci.ics.amber.engine.architecture.sendsemantics.DataSendingPolicy policy = 1;
}
message WorkerExecutionCompleted{

}

message SendPythonUDF{
  string udf = 1;
  bool isSource = 2;
}
message PythonPrint{
  string content = 1;
}
message ControlCommand {
  oneof sealed_value {
    PauseWorker pauseWorker = 1;
    ResumeWorker resumeWorker = 2;

    AddOutputPolicy addOutputPolicy = 3;
    StartWorker startWorker = 4;
    UpdateInputLinking updateInputLinking = 5;
    QueryStatistics queryStatistics = 6;
    WorkerStatistics workerStatistics = 7;
    WorkerStateInfo workerStateInfo = 8;
    SendPythonUDF sendPythonUDF = 9;


    WorkerExecutionCompleted workerExecutionCompleted = 101;

    PythonPrint pythonPrint = 201;

  }

}

